Criando a game-api